--- a/Program Mentah/Login2-master/Login2/TugasAkhir.csproj
+++ b/Program Mentah/Login2-master/Login2/TugasAkhir.csproj
@@ -133,5 +133,8 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\close.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
